--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         header {
             background: linear-gradient(135deg, var(--primary-purple), var(--primary-blue));
             color: var(--light-text);
-            padding: 0.8rem 0;
+            /* padding: 0.1rem 0; */
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             position: sticky;
             top: 0;
